--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 </div>
                 <div class="col-md-8">
                   <h2><strong>LASER PRINTERS</strong></h2>
+                  <a href="https://officeequipmenthub.us/">Copier & laser Printer Sales U.S.A</a>
                   <p>Brother, HP, Ricoh, <a href="https://copierservicemn.com/copier-repair-printer-service/">Xerox</a> and most other major brands.</p>
                 </div>
               </div>
